--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <input type="text" placeholder="Name" id="name">
         <input tye="text"  placeholder="Email" id="email">
         <Button id="btn" onclick="register()">Register</Button>
+        <Button id="alert-danger" class="alert">User Already Exist</Button>
+        <Button id="alert-success" class="alert">User Added</Button>
+        
     </div>
     <script src="app.js"></script>
 </body>
